# DeepFace

./: .gitignore  DeepFace.sln  README.md
AntiSpoof/: AntiSpoofPredict.cpp  MultiFTNet.cpp  MultiFTNet.h  Utils.h
AntiSpoofTest/: AntiSpoofTest.vcxproj.filters
ApiServer/: Api1DetectFaceController.cs  ApiServer.csproj
ApiServer/Validation/: Api1DetectFaceValidation.cs
CommonLib/: CommonLib.csproj  CommonLog.cs  ConfigData.cs  TensorExtension.cs
CommonLib/Properties/: launchSettings.json
Cpp/: CppProject.sln
Cpp/AntiSpoof/: AntiSpoof.vcxproj  AntiSpoof.vcxproj.filters  AntiSpoofPredict.h  Common.h  MiniFASNet.cpp  MiniFASNet.h
Cpp/AntiSpoofTest/: AntiSpoofTest.vcxproj  MiniFASNet.cpp  MiniFASNet.h
Cpp/DetectFace/: CMakeLists.txt
Cpp/Detector-cmake/: CMakeLists.txt  Common.h  OpenCVModel.cpp  OpenCVModel.h
Cpp/Detector.Test/: Detector.Test.cpp  Detector.Test.vcxproj  Detector.Test.vcxproj.filters  OpenCVModel.cpp  OpenCVModel.h  detector.cpp  detector.h  face.h  onet.h  pnet.cpp
Cpp/DetectorDll/: DetectorDll.vcxproj  (+3 more)
Cpp/MtCnn-Cmake/MtCnn-Cmake/: CMakeLists.txt  MtCnn-Cmake.cpp  MtCnn-Cmake.h
Cpp/MtCnnModel-Cmake/MtCnnModel/: CMakeLists.txt  detector.cpp  detector.h  pnet.cpp  pnet.h  rnet.h
DeepFace/: DeepFace.csproj  Program.cs  Workercs.cs  Workers.cs
DetectFaceBU/: DetectFaceBU.csproj  ProcessDetectFaceRequest.cs
DetectFaceObject/: DetectFaceRequest.cs  DetectorFaceResponse.cs  EmbedingFace.cs  VerifyFaceRequest.cs  VerifyFaceResponse.cs
FaceDetectInterface/: Distance.cs  FaceDetect.cs  FaceDetectInterface.csproj  ModelInfo.cs
MLCpp/: AntiSpoofPredict.cpp  AntiSpoofPredict.h  Distance.cpp  MLCpp.vcxproj  MiniFASNet.cpp  MiniFASNet.h  MultiFTNet.cpp  MultiFTNet.h
MilvusDA/: Class1.cs  MilvusDA.csproj  MilvusHelper.cs
OpenCVClr/: OpenCVClr.rar  OpenCVClr.vcxproj  OpenCVClr.vcxproj.filters
OpenCvDll/: OpenCVModel.cpp  OpenCVModel.h
PreProcess/: DetectorModel.cs  Distance.cs  MtCnnModel.cs  PreProcess.csproj  PreProcessModel.cs
PyFaceDetect/: DeepFace.py  Deepface1.py  Dockerfile  PyFaceDetect.py  PyFaceDetect.pyproj  clear_db.py  create_db.py  download_model.py  face.db  face_service-main.pyproj  functions.py  port.txt  requirements.txt  resp_code.py  service.py  test.py  test_db.py  test_requests.py  testbuildonnx.py  testonnx_output.py  utils.py
QdrantDA/: Class1.cs  QdrantDA.csproj
ShareMemoryData/: ImagePackage.cs
TcpInterface/: CommonLib.cs  MessageFaceDetect.cs  PeerConnected.cs
TestClrProject/: ConfigData.cs  Program.cs  TestClrProject.csproj  appseting.json
TestRunModel/: MiniFASNet.cpp  TestRunModel.cpp  TestRunModel.vcxproj
TestWrapper/: TestDetectModel.cs  TestWrapper.csproj  appsettings.json
VectorDbObj/: FaceDbObject.cs  ModelInforObj.cs  VectorDbObj.csproj
(+55 files in other folders)
